# modbus-channel-relay

./: Dockerfile  Pipfile  README.md  doover_config.json  pyproject.toml
.github/workflows/: build-image.yml  lint-and-test.yml  run-tests.yml
application/: __main__.py  app_config.py  app_state.py  application.py
deployment/: docker-compose.yml
simulator/: Dockerfile  app_config.json  docker-compose.yml
src/modbus_channel_relay/: __init__.py  app_config.py  application.py
tests/: docker-compose.yml  test_demo.py  test_imports.py
