[project]
name = "modbus-channel-relay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mathsman5133", email = "mathsman5132@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydoover",
]

[project.scripts]
modbus-channel-relay = "modbus_channel_relay:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pydoover = { git = "https://spaneng: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@github.com/spaneng/pydoover", rev = "9a169a85" }

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pymodbus>=3.9.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
